# deep_cel_shading

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  compare.ipynb  resnet50_keras_r2_1000it_colab_kaggle.ipynb  style_transfer.ipynb  texture_vis.ipynb
dataset_generator/: .gitignore  Cargo.toml
dataset_generator/assets/: presets.ron  presets1.ron  presets_new.ron
dataset_generator/assets/shaders/: cel_material.wgsl  face_material.wgsl  test_shader.wgsl
dataset_generator/src/: camera_control.rs  cel_material.rs  main.rs  material_loader.rs  material_properties_types.rs
dataset_generator/src/shaders/: utils.wgsl
dataset_generator/visualizer/: Cargo.toml
dataset_generator/visualizer/assets/shaders/: test_shader.wgsl
dataset_generator/visualizer/src/: experiment_shaders.rs  main.rs
dcs_visualize/: index.html
