[package]
name = "dataset_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["serialize"] } #version = "0.9.1"
bevy_mod_fbx = { path = "./bevy_mod_fbx" }
bevy_editor_pls = "0.2"
guard = "0.5.1"
#fbxcel-dom = "0.0.10"
fbxcel-dom = { path = "fbxcel-dom" }
anyhow = "1.0.58"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
bevy_egui = "0.19"
ron = "0.8.0"
bevy_asset_loader = { path = "./bevy_asset_loader/bevy_asset_loader", features = ["progress_tracking"] }#version = "0.14.1"
bevy_common_assets = { version = "0.4.0", features = ["ron"] }
iyes_progress = "0.7.1"

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy = { path = "./bevy" }