[package]
name = "dataset_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ui"]
ui = ["dep:bevy_editor_pls", "dep:bevy_egui"]
screenshot = []

[dependencies]
bevy = { version = "0.9", features = ["serialize"] } #version = "0.9.1"
bevy_mod_fbx = { path = "./bevy_mod_fbx" }
bevy_editor_pls = { version = "0.2", optional = true }
guard = "0.5.1"
#fbxcel-dom = "0.0.10"
fbxcel-dom = { path = "fbxcel-dom" }
anyhow = "1.0.58"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
#bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
bevy_egui = { version = "0.19", optional = true }
ron = "0.8.0"
bevy_common_assets = { version = "0.4.0", features = ["ron"] }
rand = "0.8.5"
lazy_static = "1.4.0"

[profile.dev.package."*"]
opt-level = 3

#[patch.crates-io]
#bevy = { path = "bevy" }